--- a/AndroidStudioProjects/MeloJin/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/AndroidManifest.xml
@@ -9,11 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:windowSoftInputMode="stateVisible|adjustPan">
-        </activity>
-        <activity android:name=".RegisterActivity" android:windowSoftInputMode="stateVisible|adjustPan">
-        </activity>
-        <activity android:name=".LoginActivity" android:windowSoftInputMode="stateVisible|adjustPan">
+        <activity android:name=".activities.ProfileActivity"></activity>
+        <activity
+            android:name=".activities.SliderActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
